Add functionality for displaying data

--- a/src/template_index_dev.html
+++ b/src/template_index_dev.html
@@ -10,8 +10,17 @@
     <div class="main-container">
 
         <div class="now-container">
- 
-        </div>   
+            <h2 class="now-city-name">Vienna</h2>
+            <div class="now-description">This is a description</div>
+            <div class="now-icon-temp-container">
+                <div class="now-icon-container">ICON</div>
+                <div class="now-temperature">temp</div>
+            </div>
+            <div class="now-other-container">
+                <div class="now-feels-like">feels like</div>
+                <div class="now-humidity">humidity</div>
+            </div>
+        </div>     
 
         <div class="hourly-container">
             <div class = "title-hourly">Forecast next 24-hours</div> 
@@ -23,6 +32,7 @@
             <div class = "data-daily"></div>  
         </div>  
 
+        
     </div>
 </body>
 </html>
