Add weather icons

--- a/src/template_index_dev.html
+++ b/src/template_index_dev.html
@@ -13,7 +13,9 @@
             <h2 class="now-city-name">Vienna</h2>
             <div class="now-description">This is a description</div>
             <div class="now-icon-temp-container">
-                <div class="now-icon-container">ICON</div>
+                <div class="now-icon-container">
+                    <i class="now wi"></i>
+                </div>
                 <div class="now-temperature">temp</div>
             </div>
             <div class="now-other-container">
