--- a/src/template_index_dev.html
+++ b/src/template_index_dev.html
@@ -1,58 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="search-bar-container">
-            <div class="label-search-bar">Find the the weather in </div>
-            <div class="search-bar">
-                <input class="input" type="text">
-                <div class="press-enter-note">** Press Enter</div>
-            </div>
+      <div class="search-bar-container">
+        <div class="label-search-bar">Find the the weather in</div>
+        <div class="search-bar">
+          <input class="input" type="text" />
+          <div class="press-enter-note">** Press Enter</div>
         </div>
-
-        <div class="select-temp">
-            <div class="celsius"> &degC</div>
-            <div class="fahrenheit"> &degF</div>
-        </div>
+      </div>
+      <div class="select-temp">
+        <div class="celsius">&degC</div>
+        <div class="fahrenheit">&degF</div>
+      </div>
     </header>
 
     <div class="fixed-bg">
-        <div class="main-container">
-            <div class="now-container">
-                <h2 class="now-city-name">Vienna</h2>
-                <div class="now-description">This is a description</div>
-                <div class="now-icon-temp-container">
-                    <div class="now-icon-container">
-                        <i class="now wi"></i>
-                    </div>
-                    <div class="now-temperature">temp</div>
-                </div>
-                <div class="now-other-container">
-                    <div class="now-feels-like">feels like</div>
-                    <div class="now-humidity">humidity</div>
-                </div>
-            </div>     
-            <div class="hourly-container">
-                <div class = "title-hourly">Forecast next 24-hours</div> 
-                <div class = "data-hourly"></div>       
-            </div> 
-            <a class="freepik-credit" href="http://www.freepik.com">Designed by upklyak / Freepik</a>    
+      <div class="main-container">
+        <div class="now-container">
+          <h2 class="now-city-name">Vienna</h2>
+          <div class="now-description">This is a description</div>
+          <div class="now-icon-temp-container">
+            <div class="now-icon-container">
+              <i class="now wi"></i>
+            </div>
+            <div class="now-temperature">temp</div>
+          </div>
+          <div class="now-other-container">
+            <div class="now-feels-like">feels like</div>
+            <div class="now-humidity">humidity</div>
+          </div>
         </div>
+        <div class="hourly-container">
+          <div class="title-hourly">Forecast next 24-hours</div>
+          <div class="data-hourly"></div>
+        </div>
+        <a class="freepik-credit" href="http://www.freepik.com"
+          >Designed by upklyak / Freepik</a        >
+      </div>
     </div>
 
     <div class="scroll-bg">
-        <div class="daily-container"> 
-            <div class = "title-daily">Forecast next 7-days</div> 
-            <div class = "data-daily"></div>  
-        </div>  
+      <div class="daily-container">
+        <div class="title-daily">Forecast next 7-days</div>
+        <div class="data-daily"></div>
+      </div>
     </div>
-
-
-</body>
+  </body>
 </html>
