Add missing labels to current weather panel

--- a/src/template_index_dev.html
+++ b/src/template_index_dev.html
@@ -33,8 +33,14 @@
             <div class="now-temperature">temp</div>
           </div>
           <div class="now-other-container">
-            <div class="now-feels-like">feels like</div>
-            <div class="now-humidity">humidity</div>
+            <div class="now-item-container">
+              <div class="now label">Feels like: </div>
+              <div class="now-feels-like"></div>
+          </div>
+          <div class="now-item-container">
+              <div class="now label">Humidity (%):</div>
+              <div class="now-humidity"></div>
+          </div>
           </div>
         </div>
         <div class="hourly-container">
