--- a/src/template_index_dev.html
+++ b/src/template_index_dev.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="search-bar-container">
-        <div class="label-search-bar">Find the the weather in</div>
+        <div class="label-search-bar">Show the weather in</div>
         <div class="search-bar">
           <input class="input" type="text" />
           <div class="press-enter-note">** Press Enter</div>
