--- a/src/template_index_dev.html
+++ b/src/template_index_dev.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500;700;900&display=swap" rel="stylesheet">   <title>Document</title>
   </head>
   <body>
     <header>
@@ -38,13 +40,13 @@
               <div class="now-feels-like"></div>
           </div>
           <div class="now-item-container">
-              <div class="now label">Humidity (%):</div>
+              <div class="now label">Humidity:</div>
               <div class="now-humidity"></div>
           </div>
           </div>
         </div>
         <div class="hourly-container">
-          <div class="title-hourly">Forecast next 24-hours</div>
+          <div class="title-hourly">24-hour forecast</div>
           <div class="data-hourly"></div>
         </div>
         <a class="freepik-credit" href="http://www.freepik.com"
@@ -54,7 +56,7 @@
 
     <div class="scroll-bg">
       <div class="daily-container">
-        <div class="title-daily">Forecast next 7-days</div>
+        <div class="title-daily">7-day forecast</div>
         <div class="data-daily"></div>
       </div>
     </div>
